# netsim

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: adjudicator.py  diagnostician.py  historian.py  orchestrator.py  prompts.py  runner.py  strategist.py  tools.py
api/: main.py
api/routes/: chat.py  network.py
data/: paths.py
data/ingest/: download_db1b.py  download_ontime.py  refs.py  verify.py
eval/: events.yaml  harness.py
notebooks/: 01_data_exploration.ipynb
sim/: demand.py  economics.py  graph.py  scenarios.py  state.py
web/: README.md  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/airline/[code]/: page.tsx
web/components/: ChatPanel.tsx  NetworkMap.tsx  TimeScrubber.tsx
web/lib/: airports.ts  api.ts
