[project]
name = "netsim"
version = "0.1.0"
description = "Outside-in airline network intelligence. CS 153 final project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Data
    "duckdb>=1.1.0",
    "polars>=1.20.0",
    "pyarrow>=18.0.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    # HTTP + ingestion
    "httpx>=0.28.0",
    "tqdm>=4.66.0",
    # Modeling
    "networkx>=3.4.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "sse-starlette>=2.1.0",
    # Agents
    "anthropic>=0.40.0",
    # Config
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "sim", "agents", "api", "eval"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
